# smartim-media

./: README.md
app/: build.gradle
app/src/androidTest/java/com/smart/im/media/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/smart/im/media/test/: LiveActivity.java  LiveTextureActivity.java  MainActivity.java  MainApplication.java
app/src/main/java/com/smart/im/media/test/util/: CameraUtil.java  PermissionsUtils.java  SPUtil.java
app/src/main/res/layout/: activity_live.xml  activity_texture_live.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/smart/im/media/test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
media/: CMakeLists.txt  build.gradle
media/src/androidTest/java/com/smart/im/media/: ExampleInstrumentedTest.java
media/src/main/: AndroidManifest.xml
media/src/main/cpp/: audio_acc.cpp  audio_acc.h  ffmpeg-jni.cpp  frame_x264.cpp  frame_x264.h  img_utils.cpp  img_utils.h  live-jni.cpp  live_jni.cpp  log.cpp  log.h  queue.c  queue.h  rtmp_utils.cpp  rtmp_utils.h  rtmp_utils1.cpp  rtmp_utils2.cpp  thread_safe_queue.cpp  thread_safe_queue.h
media/src/main/cpp/librtmp/: rtmp.c  rtmp.h  rtmp_sys.h
media/src/main/java/com/smart/im/media/: Constants.java  FFmpegBridge.java  OpenGLConstants.java
media/src/main/java/com/smart/im/media/bean/: AudioParam.java  ByteSpeedometer.java  ESConfig.java  FLvMetaData.java  FlvData.java  FrameRateMeter.java  LivePushConfig.java  MediaCodecGLWapper.java  OffScreenGLWapper.java  Packager.java  PushConfig.java  RESFrameRateMeter.java  ScreenGLWapper.java  Size.java  VideoParam.java
media/src/main/java/com/smart/im/media/bridge/: LiveBridge.java
media/src/main/java/com/smart/im/media/client/: ESVideoClient.java  LiveVideoClient.java
media/src/main/java/com/smart/im/media/core/: ESHardVideoCore.java  ESVideoCore.java  LiveHardVideoCore.java  LiveVideoCore.java
media/src/main/java/com/smart/im/media/encoder/: MediaEncoder.java  MediaMuxerWrapper.java  MediaVideoEncoder.java
media/src/main/java/com/smart/im/media/encoder/utils/: EGLBase.java  GLDrawer2D.java  RenderHandler.java
media/src/main/java/com/smart/im/media/enums/: DirectionEnum.java  EncodeEnum.java  FpsEnum.java  ResolutionEnum.java
media/src/main/java/com/smart/im/media/filter/: BaseHardVideoFilter.java
media/src/main/java/com/smart/im/media/filter/hard/: GPUImageBeautyFilter.java  GPUImageCompatibleFilter.java  HardVideoGroupFilter.java  WatermarkFilter.java
media/src/main/java/com/smart/im/media/handlers/: VideoGLHandler.java
media/src/main/java/com/smart/im/media/inter/: AudioDataListener.java  CameraNVDataListener.java  CameraYUVListener.java
media/src/main/java/com/smart/im/media/listeners/: AudioDataListener.java  CallbackDelivery.java  CameraNVDataListener.java  CameraYUVListener.java  LiveConnectionListener.java  VideoDataListener.java
media/src/main/java/com/smart/im/media/manager/: AudioRecordManager.java
media/src/main/java/com/smart/im/media/push/: AudioPusher.java  ILivePusher.java  LivePusher.java  Pusher.java  SmartLivePusher.java  VideoHardPusher.java  VideoPusher.java
media/src/main/java/com/smart/im/media/rtmp/: RtmpSender.java
media/src/main/java/com/smart/im/media/threads/: VideoSenderThread.java
media/src/main/java/com/smart/im/media/utils/: ByteArrayUtlis.java  CameraUtil.java  GLHelper.java  GLShaderUtils.java  GLUtils.java  MatrixState.java  MediaCodecHelper.java  TextResourceReader.java
media/src/main/java/com/smart/im/media/utils/opengl/: GLHelper.java  ShaderHelper.java  TextureHelper.java  VertexArray.java
media/src/main/java/com/smart/im/media/video/: ESHardVideoCore.java  ESVideoClient.java  ESVideoCore.java
media/src/main/jniLibs/include/fdk-aac/: aacenc.h  abs.h  sbr.h  sbr_encoder.h
media/src/main/jniLibs/include/librtmp/: log.h
media/src/main/jniLibs/other/: config.h
media/src/main/res/layout/: layout_camera_surface.xml
media/src/test/java/com/smart/im/media/: ExampleUnitTest.java
